week 13th commit after doing the wallet

--- a/views/admin/category/create.ejs
+++ b/views/admin/category/create.ejs
@@ -71,7 +71,7 @@
             'success'
             )
             setTimeout(() => {
-                window.location = "http://127.0.0.1:3000/admin/category"
+                window.location.href = "/admin/category"
             }, 1000);
             
           } else {
