--- a/views/admin/category/edit.ejs
+++ b/views/admin/category/edit.ejs
@@ -77,7 +77,7 @@
             'success'
             )
             setTimeout(() => {
-                window.location = "http://127.0.0.1:3000/admin/category"
+                window.location.href = "/admin/category"
             }, 2000);
             
           } else {
