--- a/views/public/assets/css/main.css
+++ b/views/public/assets/css/main.css
@@ -20,6 +20,11 @@ body {
   color: rgba(var(--color-primary-rgb), 1);
 }
 
+.accordion.accordion-flush .accordion-button {
+  background-color: transparent;
+  border: none;
+}
+
 .dropdown-toggle::after {
   display: none;
 }
