--- a/views/public/forgotPassword.ejs
+++ b/views/public/forgotPassword.ejs
@@ -55,7 +55,7 @@
 			});
 			
 			const data = await response.json();
-			console.log(JSON.stringify(data)); 
+			//console.log(JSON.stringify(data)); 
 			const alertDiv = document.getElementById('alertResult');
 			
 			if (data.status === 'success') { 
