--- a/views/public/includes/profileLeft.ejs
+++ b/views/public/includes/profileLeft.ejs
@@ -2,7 +2,7 @@
     <div class="card mb-4">
         <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
-                alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
+                alt="avatar" class="rounded-circle img-fluid" style="width: 70px;">
             <h5 class="my-3"><%= userName ? userName : "user" %></h5>
         </div>
     </div>
@@ -31,6 +31,12 @@
                     <li class="list-group-item d-flex align-items-center p-3">
                         <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
                         <p class="mb-0">Track Order</p>
+                    </li>
+                </a>
+                <a href="/wallet">
+                    <li class="list-group-item d-flex align-items-center p-3">
+                        <i class="fab fa-instagram fa-lg" style="color: #ac2bac;"></i>
+                        <p class="mb-0">Wallet</p>
                     </li>
                 </a>
                 <a href="/logout">
