--- a/views/public/cart.ejs
+++ b/views/public/cart.ejs
@@ -15,7 +15,7 @@
                                 <img src="./assets/img/cart.png" width="130" height="130" class="img-fluid mb-4 mr-3">
                                 <h3><strong>Your Cart is Empty</strong></h3>
                                 <h4>Add Foods</h4>
-                                <a href="/" class="btn btn-primary cart-btn-transform m-3" data-abc="true">Continue Shopping</a>
+                                <a href="/foods" class="btn btn-primary cart-btn-transform m-3" data-abc="true">Continue Shopping</a>
                             </div>
                         </div>
                     </div>
