--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -73,6 +73,56 @@
 			</div>
 		</section><!-- End Hero Slider Section -->
 
+		<div class="container p-0 text-center my-3 pt-5 mt-5">
+			<div class="row mx-auto my-auto justify-content-center">
+				<div class="col-md-12">
+					<h3>
+						Great Offers
+					</h3>
+					<hr>
+				</div>
+				<div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner" role="listbox">
+						<%  if (locals.food) { 
+							let first = true
+							food.forEach((item)=>{ 
+						%>
+							<div class="carousel-item <%= first === true ? 'active' : '' %>">
+								<div class="col-md-3">
+									<div class="card">
+										<div class="card-img">
+											<img src="/food/<%= item.image %>"
+												class="img-fluid">
+										</div>
+										<div class="card-img-overlay" style="background-color: rgb(21, 21, 21, 0.3);">
+											<h4 class="bg-warning rounded-circle" style="line-height: 100px; width: 100px;">
+												<b>50%Off</b>
+											</h4>	
+										</div>
+									</div>
+								</div>
+							</div>
+						<%  
+							first = false
+							}) 
+							}else{ 
+						%>
+							<p class="text-secondary">No products to display</p>
+						<% } %>
+					</div>
+					<a class="carousel-control-prev bg-transparent w-aut" href="#recipeCarousel" role="button"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next bg-transparent w-aut" href="#recipeCarousel" role="button"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+
+
 		<!-- ======= Post Grid Section ======= -->
 		<section id="posts" class="posts">
 			<div class="container" data-aos="fade-up">
@@ -87,7 +137,7 @@
 									if (locals.categories) { 
 										categories.forEach((item)=>{
 								%>
-									<li><a href="categories/<%= item.categoryName %>"><i class="bi bi-chevron-right"></i> <%= item.categoryName %></a></li>
+									<li><a href="/foods?page=1&category=<%= item.categoryName %>"><i class="bi bi-chevron-right"></i> <%= item.categoryName %></a></li>
 								<% }) }else{ %>
 									<p class="text-secondary">No products to display</p>
 								<% } %>
@@ -101,19 +151,21 @@
 									food.forEach((item)=>{
 							%>
 								<div class="col-md-3 border-start custom-border">
-									<div class="p-3 bg-light mb-4">
+									<div class="bg-light mb-4">
 										<div class="post-entry-1">
 											<a href="/foodDetail/<%= item.slug %>">
 												<% if(item.image){ %>
-													<img src="/food/<%= item.image %>" alt="food image" class="img-fluid">
+													<img src="/food/<%= item.image %>" alt="food image" class="img-fluid mb-0">
 												<% }else{ %>
 													<img src="/no-image.jpg" class="img-fluid" alt="food image">
 												<% } %>
 											</a>
-											<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
-											<h2 style="height: 50px; padding-top: 10px;" class=""><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
-											<a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
-											<h2 class="pt-2"><a href="/foodDetail/" class="text-success"><b>₹ <%= item.discPrice %></b></a>&nbsp;&nbsp;<small class="text-secondary"><del>₹ <%= item.orgPrice %></del></small></h2>
+											<div class="p-2">
+												<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
+												<h2 style="height: 50px; padding-top: 10px;" class=""><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
+												<a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
+												<h2 class="pt-2"><a href="/foodDetail/" class="text-success"><b>₹ <%= item.discPrice %></b></a>&nbsp;&nbsp;<small class="text-secondary"><del>₹ <%= item.orgPrice %></del></small></h2>
+											</div>
 										</div>
 										</div>
 								</div>
@@ -133,5 +185,24 @@
 			</div>
 		</section> 
 	</main>
+
+	
+    <script>
+        let items = document.querySelectorAll(".carousel .carousel-item");
+
+        items.forEach((el) => {
+            const minPerSlide = 4;
+            let next = el.nextElementSibling;
+            for (var i = 1; i < minPerSlide; i++) {
+                if (!next) {
+                    // wrap carousel by using first child
+                    next = items[0];
+                }
+                let cloneChild = next.cloneNode(true);
+                el.appendChild(cloneChild.children[0]);
+                next = next.nextElementSibling;
+            }
+        });
+    </script>
 
 <%- include('./includes/footer') %>
