--- a/views/public/wallet.ejs
+++ b/views/public/wallet.ejs
@@ -20,7 +20,7 @@
                                     <p class="mb-0">Balance : </p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">₹ <%= locals.data.wallet ? data.wallet : 0 %></p>
+                                    <p class="text-muted mb-0">₹ <%= locals.wallet ? wallet : 0 %></p>
                                 </div>
                             </div>
                             <hr>
